--- a/pre-workshop/software-install.qmd
+++ b/pre-workshop/software-install.qmd
@@ -4,7 +4,7 @@ title: "Installation Instructions and Set-Up"
 
 ## Getting Started with GitHub
 
-### 1. Create your GitHub Account
+### Create your GitHub Account
 
 As part of this workshop we will be connecting and pushing some sample code to GitHub, therefore you'll need to create a GitHub account. In general, creating a GitHub account can be a great way to collaborate on open-source projects, showcase your work, and learn from others.
 
@@ -16,14 +16,14 @@ As part of this workshop we will be connecting and pushing some sample code to G
 
 Optional reading: [Configuring your GitHub account](https://docs.github.com/en/get-started/onboarding/getting-started-with-your-github-account#part-1-configuring-your-github-account)
 
-### 2. Login to your GitHub Account
+### Login to your GitHub Account
 
 When we sign in to GitHub on the web, we are signing into our application account created in step 1. This is where we manage our profile settings, set our passwords, and browse repositories. It is possible to edit repository content from GitHub although editing is typically performed in a local application such as RStudio, VS Code or a text editor. We will go into more detail on that in the course workshop.
 
 1.  Go to [https://github.com/](https://github.com) and click "Sign In" (top right corner).\
 2.  Enter either your username or your email address, and password created in Step 1.
 
-### 3. Configure Multi-Factor authentication (2FA)
+### Configure Multi-Factor authentication (2FA)
 
 As of 2023 all GitHub accounts are required to have multi-factor authentication (2FA) configured for extra security. Several options exist for setting up 2FA, the simplest is via text message described below.
 
@@ -40,7 +40,7 @@ As of 2023 all GitHub accounts are required to have multi-factor authentication 
 
 Optional reading: [Other 2FA configurations](https://docs.github.com/en/authentication/securing-your-account-with-two-factor-authentication-2fa/configuring-two-factor-authentication).
 
-### 4. Create a Personal Access Token
+### Create a Personal Access Token
 
 To keep your account secure, you must authenticate before you can access certain resources on GitHub. When we access resources via a browser (as in Step 2) we are authenticating with our username and password and two-factor authentication. In the workshop we will also be accessing GitHub resources via the REST API. You can authenticate with the API in different ways, but the simplest way is with a Classic Personal Access Token (PAT).
 
@@ -65,7 +65,7 @@ Then create your PAT:
 
 Optional reading: [Authenticating to the REST API](https://docs.github.com/en/rest/overview/authenticating-to-the-rest-api?apiVersion=2022-11-28)
 
-### 5. Install Git (and GitBash) {.tabset}
+### Install Git (and GitBash) {.tabset}
 
 Git is a set of command line utility programs that are designed to execute on a *Unix style command-line environment*. Linux and macOS both include built-in Unix command line terminals. Most likely you are working on a Windows operating system and will require Git Bash, an application for Windows environments which provides an emulation layer for a Git command line experience.
 
@@ -79,7 +79,7 @@ Git is a set of command line utility programs that are designed to execute on a 
 
 Please visit: [Installing Git](https://www.atlassian.com/git/tutorials/install-git) and follow the instructions for installing git for MacOSX.
 
-### 6. Configure Git
+### Configure Git
 
 #### Git Set Up
 
