--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -12,10 +12,12 @@ knitr::opts_chunk$set(eval = FALSE)
 
 ## Creating a Repository
 
-First, let's create a new directory on the C drive for our work. Your user profile on the C drive is the best place to create a repository for now. Git does not know how to reconcile ownership H drive as a "safe" place for our work. We will start by opening a `git bash` terminal, changing to the C: drive, creating a new directory, and changing the current working directory to the newly created one:
+First, let's create a new directory on the C drive for our work. Your user profile on the C drive is the best place to create a repository for now. Git does not know how to reconcile the H drive as a "safe" place for our work. We will start by opening a `git bash` terminal, changing to the C: drive, creating a new directory, and changing the current working directory to the newly created one:
 
 ```bash
 $ cd c:/users/lfredric
+$ mkdir intro-to-git
+$ cd intro-to-git
 $ mkdir planets
 $ cd planets
 ```
@@ -57,6 +59,8 @@ Note that if you are ever unsure of which working directory you are in, it shoul
 ## Orienting yourself to bash
 
 It is often useful to keep a File Explorer instance open while you are first learning to navigate through the world of the command line. This allows you to see, in real time, the new directories and files you are creating from the command line. 
+
+If you get lost, you can also use File Explorer to open a Git bash terminal directly in the folder we wish to work in. Simply navigate to the parent folder, right click on the folder you wish to work in, and click `Open Git Bash here`.
 :::
 
 ![New folder in the user/username directory.](../figures/mkdir-planets.png){width=60% fig-align="left"}
