--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -53,6 +53,7 @@ Note that if you are ever unsure of which working directory you are in, it shoul
 
 ![The command line, and current working directory.](../figures/bash-commands.png){width=70% fig-align="left"}
 
+One final note on command lines. For Windows computers, to paste any line into the open terminal, <kbd>Ctrl</kbd> + <kbd>v</kbd> sadly won't work. Instead, you use <kbd>Shift</kbd> + <kbd>Insert</kbd>. For OSX, <kbd>Command</kbd> + <kbd>v</kbd> should still work. 
 :::
 
 ::: {.callout-tip}
